--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&amp;subset=cyrillic" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="index.css">
 
 <div class="resident">
@@ -19,7 +20,17 @@
       <div class="separator-top"></div>
       <div class="close"></div>
       <div class="avatar"></div>
-      <div class="text">
+      <div class="right">
+        <div class="text"></div>
+        <div class="description">
+          <b style="font-size: 30px;">Андрей Кириллов</b><br>
+          10 лет<br><br>
+          <span style="font-weight: 100;">«В школе меня научили<br>
+          справляться с волнением<br>
+          и вести себя<br>
+          профессионально.<br>
+          Я влюбился в музыку»</span>
+        </div>
       </div>
     </div>
   </div>
