--- a/index.html
+++ b/index.html
@@ -9,11 +9,21 @@
       <div class="circle">
         <div class="modal"></div>
       </div>
-      <div class="kid kid1" data-avatar="1"></div>
-      <div class="kid kid2" data-avatar="2"></div>
-      <div class="kid kid3" data-avatar="3"></div>
-      <div class="kid kid4" data-avatar="4"></div>
-      <div class="kid kid5" data-avatar="5"></div>
+      <div class="kid" data-avatar="1">
+        <div class="kid1"></div>
+      </div>
+      <div class="kid" data-avatar="2">
+        <div class="kid2"></div>
+      </div>
+      <div class="kid" data-avatar="3">
+        <div class="kid3"></div>
+      </div>
+      <div class="kid" data-avatar="4">
+        <div class="kid4"></div>
+      </div>
+      <div class="kid" data-avatar="5">
+        <div class="kid5"></div>
+      </div>
       <div class="kid_bg"></div>
     </div>
     <div class="team-details">
