--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="right">
         <div class="text"></div>
         <div class="description">
-          <b style="font-size: 30px;">Андрей Кириллов</b><br>
+          <b style="font-size: 2em;">Андрей Кириллов</b><br>
           10 лет<br><br>
           <span style="font-weight: 100;">«В школе меня научили<br>
           справляться с волнением<br>
