--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="kid4"></div>
       </div>
       <div class="kid" data-avatar="5">
-        <div class="kid5"></div>
+        <div style="padding-bottom: 1vh;" class="kid5"></div>
       </div>
       <div class="kid_bg"></div>
     </div>
